# framework

./: .gitignore  CMakeLists.txt
communication/: CMakeLists.txt
communication/doc/: communication.puml
communication/include/: byte_receiver.hpp  communication_manager.hpp  data_receiver.hpp  icommunication_manager.hpp  idata_receiver.hpp  idata_sender.hpp  ireceiver.hpp  isender.hpp  package_descriptor.hpp  package_manager.hpp  package_receiver.hpp  package_sender.hpp  package_types.hpp
communication/src/: byte_receiver.cpp  byte_sender.cpp  package_descriptor.cpp  package_manager.cpp  package_receiver.cpp  package_sender.cpp
communication/tests/: CMakeLists.txt
communication/tests/src/: ut_communication_manager.cpp  ut_package_descriptor.cpp  ut_package_receiver.cpp
communication/transport_layer/: CMakeLists.txt
communication/transport_layer/include/: uart.hpp  uart_communication_manager.hpp  uart_types.hpp
communication/transport_layer/src/: uart.cpp
communication/transport_layer/tests/: CMakeLists.txt
communication/transport_layer/tests/src/: ut_uart_communication_manager.cpp
data/: CMakeLists.txt
data/include/: array.hpp  composite.hpp  data_sender.hpp  idata.hpp  idata_parser.hpp  idata_sender.hpp  idata_serializer.hpp  iparser.hpp  iserializer.hpp  object.hpp  raw_data.hpp  string.hpp  value.hpp
data/src/: array.cpp  data_receiver.cpp  data_sender.cpp  idata.cpp  idata_parser.cpp  idata_serializer.cpp  object.cpp  string.cpp
generics/: CMakeLists.txt
generics/include/: dispatcher.hpp  factory.hpp  icreator.hpp  ilistener.hpp  ireader.hpp  isubscribable.hpp  iwriter.hpp  registry.hpp
generics/tests/: CMakeLists.txt
generics/tests/include/: test_listener.hpp
generics/tests/src/: ut_dispatcher.cpp
include/: dispatcher.hpp  factory.hpp  icreator.hpp  ifeature.hpp  ilistener.hpp  iparsable.hpp  isender.hpp  itask.hpp  registry.hpp
io/: CMakeLists.txt
io/include/: bytes_reader.hpp  ibytes_reader.hpp  ibytes_writer.hpp  ireader.hpp  iwriter.hpp
io/src/: bytes_reader.cpp
json/: CMakeLists.txt
json/include/: json_common.hpp  json_parser.hpp  json_serializer.hpp
json/src/: json_common.cpp  json_parser.cpp  json_serializer.cpp
json/tests/: CMakeLists.txt
json/tests/src/: ut_json_parser.cpp  ut_json_serializer.cpp
src/: ifeature.cpp  ilistener_char.cpp  ilistener_const_exception_ref.cpp  ilistener_const_vector_char_ref.cpp  iparsable.cpp  isender.cpp
state_machine/: CMakeLists.txt
state_machine/include/: state_machine.hpp  state_machine_context.hpp  state_machine_event.hpp  state_machine_state.hpp
state_machine/tests/: CMakeLists.txt
state_machine/tests/src/: ut_state_machine.cpp
system/: CMakeLists.txt
system/include/: message_manager.hpp  message_parser.hpp
system/src/: message_manager.cpp  message_parser.cpp
system/tests/: CMakeLists.txt
system/tests/include/: test_message_listener.hpp
system/tests/src/: test_message_listener.cpp  ut_message_parser.cpp
task/: CMakeLists.txt
task/include/: itask.hpp  movement_task.hpp
task/src/: itask.cpp  movement_task.cpp
